--- a/app/containers/HomePage/style.css
+++ b/app/containers/HomePage/style.css
@@ -76,9 +76,18 @@ form {
   align-items: center;
 }
 
+.othertextcontainer{
+  border: 1px solid #6F6F6F;
+  border-radius: 5px;
+  width: 96%;
+  margin: 2%;
+  padding: 5px;
+}
+
 .checkBox{
-  width: 250px;
+  width: 200px;
   margin: 10px;
+  flex-grow: 1;
 }
 
 .box{
